--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -1,8 +1,8 @@
 name: "Create Python Wheels"
 
 on:
-  release:
-    types: [ created ]
+  push:
+    branches: [ '*' ]
   workflow_dispatch: {}
 
 
