--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -1,8 +1,7 @@
 name: "Create Python Wheels"
 
 on:
-  release:
-    types: [ created ]
+  push:
   workflow_dispatch: {}
 
 
@@ -16,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: ["windows-latest"]
-        python-version: [3.8]
+        python-version: [3.9]
         architecture: ["x64"]
       fail-fast: false
 
@@ -69,7 +68,7 @@ jobs:
           CIBW_ENVIRONMENT: >
             STAN_BACKEND="${{ env.STAN_BACKEND }}"
             PIP_CACHE_DIR="${{ env.PIP_DEFAULT_CACHE }}"
-          CIBW_BUILD: cp36-* cp37-* cp38-*
+          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
           CIBW_ARCHS: native
           CIBW_BUILD_FRONTEND: build
           # CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
@@ -88,7 +87,7 @@ jobs:
     strategy:
       matrix:
         os: ["macos-latest", "ubuntu-latest"]
-        python-version: [3.8]
+        python-version: [3.9]
         architecture: ["x64"]
       fail-fast: false
 
@@ -142,7 +141,7 @@ jobs:
             PIP_CACHE_DIR="/host/${{ env.PIP_DEFAULT_CACHE }}"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_BEFORE_ALL_LINUX: chmod -R a+rwx /host/${{ env.PIP_DEFAULT_CACHE }}
-          CIBW_BUILD: cp36-* cp37-* cp38-*
+          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
           CIBW_SKIP: "*musllinux*"
           CIBW_ARCHS: native
           CIBW_BUILD_FRONTEND: build
